data/derived/comb/progs/unify/prog3448.ml.out
Characters 22-33:
  let _ = buildAverage ((VarX, 2.0), (VarY, 4.0));;
                        ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
